# Lab3

./: CMakeLists.txt  README.md  main.cpp
src/: QuickSort.h
tests/: test.cpp
